force-app/main/default/objects/User_Alert__c/User_Alert__c.object-meta.xml
<CustomObject>
    <label>User Alert</label>
    <nameField>
        <displayFormat>UA - {mmdd} {0}</displayFormat>
        <label>User Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>